test/message/esm_display_syntax_error.mjs
// Flags:  --experimental-modules
'use strict';
await async () => 0;
